# curst

./: Cargo.toml  README.md
.github/workflows/: push.yml
src/: curses.rs  lib.rs
src/curses/: windows.rs
tests/: key.rs
