[package]
name = "curst"
version = "0.1.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "Rustifying curses"
license = "MIT"
readme = "README.md"
keywords = ["curses", "PDCurses"]
categories = ["command line utilities"]
repository = "https://github.com/jsim2010/curst.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.5"
parse-display = "0.1.1"

[target.'cfg(windows)'.dependencies]
pdcurses-sys = "0.7.1"

[target.'cfg(unix)'.dependencies]
ncurses = { version = "5.99.0", features = ["panel"]}
